# kori-core

./: README.md  SECURITY.md
docs/: 01_ai_asset_engine.md  03_settlement_rails.md  04_trust_safety.md
docs/diagrams/: settlement_handshake.md
programs/kori_protocol/: Cargo.toml
programs/kori_protocol/src/: lib.rs
